Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86524

QQuickView, Memory leak of QOpenGLContextGroup object

    XMLWordPrintable

Details

    • b48fe3d53af1be7d8d7d0bdc5a2bb4aba7894fdf (qt/qtdeclarative/5.15)

    Description

      For QQuickView the QOpenGLContextGroup doesn't seem to be deleted always. For example in:

      int main(int argc, char *argv[])
      {
          QApplication a(argc, argv);
          QQuickView w;
          w.show();
          int ret = a.exec();
      
          int nCrtDbgFlag = _CrtSetDbgFlag(_CRTDBG_REPORT_FLAG);
          nCrtDbgFlag |= _CRTDBG_LEAK_CHECK_DF;
          _CrtSetDbgFlag(nCrtDbgFlag);
      
          return ret;
      }
      

      deleteLater would be called on QOpenGLContextGroup but it's after event loop has stopped.

      Steps to reproduce the issue:

      • Run the attached project
      • Close the window

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            miikapernu Miika Pernu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes