Move the sharegroup with the context to the render thread

...if the context does not have a share context, i.e. the
QOpenGLContextGroup was created together with the QOpenGLContext.

This is not applicable to Qt 6 where the context is created on the
render thread and so there is no moveToThread() for it.

Fixes: QTBUG-86524
Change-Id: Ida8b947548325ea2f7572cdb9373bbc90e4e7e4f
Reviewed-by: Andy Nichols <andy.nichols@qt.io>